--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.18.2
-	loader_version=0.14.6
+	loader_version=0.13.3
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = net.ims
+	maven_group = community.devos.nautical
 	archives_base_name = creepermultidrop
