🩹 `community` -> `one` in namespace

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = community.devos.nautical
+	mod_version = 1.0.1
+	maven_group = one.devos.nautical
 	archives_base_name = creepermultidrop
