--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	loader_version=0.13.3
+# check these on https://fabricmc.net/develop
+minecraft_version=1.18.2
+loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.1
-	maven_group = one.devos.nautical
-	archives_base_name = creepermultidrop
+mod_version=1.0.1
+maven_group=one.devos.nautical
+archives_base_name=creepermultidrop
